# tiny-s3

./: .pdm-python  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/tiny_s3/: client.py
tests/: conftest.py  test_client.py  test_zero.py
