[project]
name = "tiny-s3"
version = "0.0.1"
description = "Tiny S3 client"
authors = [{ name = "Sergey Abramov", email = "spabramov@gmail.com" }]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = ["pytest>=8.2.0"]
lint = ["ruff>=0.4.4", "flake8>=7.0.0"]
dev = [
    "pdm>=2.15.2",
]
