[project]
name = "tiny-s3"
version = "0.0.1"
description = "Tiny S3 client"
authors = [{ name = "Sergey Abramov", email = "spabramov@gmail.com" }]
dependencies = ["requests>=2.31.0,<3.0"]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-dotenv>=0.5.2",
]
lint = [
    "ruff>=0.4.4",
    "flake8>=7.0.0",
    "pylint>=3.2.1",
    "mypy>=1.10.0",
    "black>=24.4.2",
]
dev = [
    "pdm>=2.15.2",
    "debugpy>=1.8.1",
    "minio>=7.2.7",
]
